--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <tr>
                 <td>08:00 - 08:45</td>
                 <td class="pusta-komorka"></td>
-                <td>Wychowanie fizyczne [CH] <br> balon <br> Kaniewski Mikołaj</td>
+                <td>Wychowanie fizyczne <br> balon <br> Kaniewski Mikołaj/Buc Dorota</td>
                 <td>Zajęcia z wychowawcą <br> 31 <br> Skok Ewa</td>
                 <td class="pusta-komorka"></td>
                 <td class="pusta-komorka"></td>
@@ -30,7 +30,7 @@
             <tr>
                 <td>08:55 - 09:40</td>
                 <td class="pusta-komorka"></td>
-                <td>Wychowanie fizyczne [CH] <br> s.gim <br> Kaniewski Mikołaj</td>
+                <td>Wychowanie fizyczne <br> balon <br> Kaniewski Mikołaj/Buc Dorota</td>
                 <td>Matematyka <br> 31 <br> Skok Ewa</td>
                 <td class="pusta-komorka"></td>
                 <td>Język polski <br> 23 <br> Pera Agnieszka</td>
@@ -55,7 +55,7 @@
                 <td>11:40 - 12:25</td>
                 <td>Język polski <br> 30 <br> Pera Agnieszka</td>
                 <td>Historia <br> 24 <br> Podpirko Adrian</td>
-                <td>Wychowanie fizyczne [CH] <br> HJ <br> Kaniewski Mikołaj</td>
+                <td>Wychowanie fizyczne <br> HJ <br> Kaniewski Mikołaj/Buc Dorota</td>
                 <td>Geografia <br> 32 <br> Marcisz Elwira</td>
                 <td>Matematyka <br> 31 <br> Skok Ewa</td>
             </tr>
@@ -63,7 +63,7 @@
                 <td>12:40 - 13:25</td>
                 <td>Język angielski <br> 26/24 <br> Chrupała Katarzyna/Karolczuk Paulina</td>
                 <td>Muzyka <br> 23 <br> Kowalska Magdalena</td>
-                <td>Wychowanie fizyczne [CH] <br> HJ <br> Kaniewski Mikołaj</td>
+                <td>Wychowanie fizyczne <br> HJ <br> Kaniewski Mikołaj/Buc Dorota</td>
                 <td>Język angielski <br> 26/24 <br> Chrupała Katarzyna/Karolczuk Paulina</td>
                 <td>Wychowanie do życia w rodzinie [WDŻ] <br> 23 <br> Janecka Aleksandra</td>
             </tr>
