--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </tr>
             <tr>
                 <td>12:40 - 13:25</td>
-                <td>Język angielski <br> 26/24 <br> Chrupała Katarzyna/Karolczuk Paulina</td>
+                <td>Język angielski [G1] / Informatyka [G2]  <br> 26/25 <br> Chrupała Katarzyna/Skuza Agnieszka</td>
                 <td>Muzyka <br> 23 <br> Kowalska Magdalena</td>
                 <td>Wychowanie fizyczne <br> HJ <br> Kaniewski Mikołaj/Buc Dorota</td>
                 <td>Język angielski <br> 26/24 <br> Chrupała Katarzyna/Karolczuk Paulina</td>
